syntax = "proto3";

package proto;
import "google/api/annotations.proto";

option go_package = "cartPb";

message CartItemProductSimple {
  string  sku = 1;
  int32  qty = 2;
  string quoteId = 3 ;
}

message AddItemProductSimpleRequest {
  CartItemProductSimple  cartItem = 1;
}

message  AddItemProductSimpleResponse {
  int32 item_id = 1;
  string sku = 2;
  int32  qty = 3;
  string  name = 4;
  float price = 5;
  string productType = 6;
  string  quoteId = 7;
}



message ConfigurableItemOptions {
  string optionId = 1 ;
  int32  optionValue = 2;
}
message ExtensionAttributes {
  repeated ConfigurableItemOptions configurableItemOptions = 1;
}
message ProductOption {
  ExtensionAttributes extensionAttributes = 1;
}
message CartItemProductConfigurable {
  string sku = 1;
  int32  qty = 2;
  string quoteId = 3;
  ProductOption productOption = 4;
  ExtensionAttributes extensionAttributes = 5;
}

message AddItemProductConfigurableRequest {
  CartItemProductConfigurable cartItem = 1;
}

message AddItemProductConfigurableResponse {
  int32 item_id = 1;
  string sku = 2;
  int32 qty = 3;
  string  name = 4;
  int32 price = 5;
  string  product_type = 6;
  string quote_id = 7;
}



message  Address {
  string region = 1;
  string regionId = 2;
  string regionCode = 3;
  string countryId = 4 ;
  repeated string street = 5;
  string postcode = 6;
  string city = 7;
  string firstName = 8;
  string lastName = 9;
  int32  customerId = 10;
  string email = 11 ;
  string telephone = 12;
  int32  sameAsBilling = 13;

}
message EstimateShippingRequest{
  Address address = 1;

}

message Data {
  string  carrier_code = 1;
  string  method_code = 2;
  string  carrier_title = 3;
  string  method_title = 4;
  int32   amount = 5;
  int32   base_amount = 6;
  bool    available = 7;
  string  error_message = 8;
  int32   price_excl_tax = 9;
  int32   price_incl_tax = 10;
}
message EstimateShippingResponse {
  repeated Data data = 1;

}

service AddItemProduct{
  rpc AddItemProductSimple(AddItemProductSimpleRequest) returns (AddItemProductSimpleResponse) {
    option (google.api.http) = {
      post: "/rest/default/V1/carts/mine/items"
      body: "*"
    };
  }

  rpc AddItemProductConfigurable(AddItemProductConfigurableRequest) returns (AddItemProductConfigurableResponse) {
    option (google.api.http) = {
      post: "/rest/default/V1/carts/mine/items/con"
      body: "*"
    };
  }

  rpc EstimateShipping(EstimateShippingRequest) returns (EstimateShippingResponse) {
    option (google.api.http) = {
      post: "/test"
      body: "*"
    };
  }
}

